--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <p>Hello world!</p>
-    
-</body>
+    <style>
+        body {
+            background-color: rgb(98, 216, 51);
+        }
+        h1 {
+            margin: 1rem;
+            color: rgb(0, 0, 0);
+        }
+    </style>
+
+  </head>
+  <body>
+    <h1>Work in progress, please don't judge</h1>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://i.ytimg.com/vi/yYRB4_5LBII/maxresdefault.jpg" class="card-img-top" alt="Bean">
+                    <div class="card-body">
+                      <h5 class="card-title">Naslov projekta</h5>
+                      <p class="card-text">Ode će ić kratki opis projekta.</p>
+                      <a href="#" class="btn btn-primary">Click me</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://i.ytimg.com/vi/yYRB4_5LBII/maxresdefault.jpg" class="card-img-top" alt="Bean">
+                    <div class="card-body">
+                      <h5 class="card-title">Naslov projekta</h5>
+                      <p class="card-text">Ode će ić kratki opis projekta.</p>
+                      <a href="#" class="btn btn-primary">Click me</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://i.ytimg.com/vi/yYRB4_5LBII/maxresdefault.jpg" class="card-img-top" alt="Bean">
+                    <div class="card-body">
+                      <h5 class="card-title">Naslov projekta</h5>
+                      <p class="card-text">Ode će ić kratki opis projekta.</p>
+                      <a href="#" class="btn btn-primary">Click me</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
