--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             margin: 1rem;
             color: rgb(0, 0, 0);
         }
+        footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+        }
     </style>
 
   </head>
@@ -53,6 +59,13 @@
             </div>
         </div>
     </div>
+  <footer class="bg-dark py-4 mt-auto">
+    <div class="container px-5">
+        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+            <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Mario Grubišić 2024</div></div>
+        </div>
+    </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
